fix: pointer hack for touch click listener

--- a/public/index.html
+++ b/public/index.html
@@ -6,16 +6,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Game</title>
   <script src="index.js" defer type="module"></script>
+  <style>
+    button {
+      width: 200px;
+      height:200px;
+      cursor: pointer;
+    }
+  </style>
 </head>
 <body>
-  <button id="start" style="width: 200px;height:200px">Start</button>
-  <button id="spin" style="width: 200px;height:200px">Spin</button>
-  <button id="inactive" style="width: 200px;height:200px">Inactive</button>
-  <button id="active" style="width: 200px;height:200px">Active</button>
-  <button id="reverb_on" style="width: 200px;height:200px">Reverb On</button>
-  <button id="reverb_off" style="width: 200px;height:200px">Reverb Off</button>
-  <button id="mute" style="width: 200px;height:200px">Mute</button>
-  <button id="unmute" style="width: 200px;height:200px">Unmute</button>
-  <button id="stop" style="width: 200px;height:200px">Stop</button>
+  <button id="start">Start</button>
+  <button id="spin">Spin</button>
+  <button id="inactive">Inactive</button>
+  <button id="active">Active</button>
+  <button id="reverb_on">Reverb On</button>
+  <button id="reverb_off">Reverb Off</button>
+  <button id="mute">Mute</button>
+  <button id="unmute">Unmute</button>
+  <button id="stop">Stop</button>
 </body>
 </html>
